force-app/main/default/objects/Event_Inventory_Detail__c/Event_Inventory_Detail__c.object-meta.xml
<CustomObject>
    <description
  >Object manages the columns that display in the Event Inventory Grid on the SF Tools site.</description>
    <label>Event Inventory Detail</label>
    <nameField>
        <label>EID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Inventory Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>