force-app/main/default/objects/Event_Inventory_Detail__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Govtech</fullName>
            </value>
            <value>
                <fullName>CDE</fullName>
            </value>
            <value>
                <fullName>CDG</fullName>
            </value>
            <value>
                <fullName>Governing</fullName>
            </value>
            <value>
                <fullName>INSIDER CA</fullName>
            </value>
            <value>
                <fullName>INSIDER FL</fullName>
            </value>
            <value>
                <fullName>INSIDER TX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>