force-app/main/default/objects/Event_Inventory_Detail__c/fields/Color_Picker__c.field-meta.xml
<CustomField>
    <fullName>Color_Picker__c</fullName>
    <description
  >Sets the column color for both the header and the column.</description>
    <inlineHelpText
  >Sets the column color for both the header and the column.</inlineHelpText>
    <label>Color Picker</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shark</fullName>
            </value>
            <value>
                <fullName>Dog Toothpaste</fullName>
            </value>
            <value>
                <fullName>Dirty Marshmallow</fullName>
            </value>
            <value>
                <fullName>Salmon Egg</fullName>
            </value>
            <value>
                <fullName>Olive Gray</fullName>
            </value>
            <value>
                <fullName>Elephant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>