force-app/main/default/objects/Event_Inventory_Detail__c/fields/Column_Color__c.field-meta.xml
<CustomField>
    <fullName>Column_Color__c</fullName>
    <defaultValue>&quot;FFFFFF&quot;</defaultValue>
    <description>The hex code for the color of the column.</description>
    <inlineHelpText>The hex code for the color of the column.</inlineHelpText>
    <label>Column Color</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>