force-app/main/default/objects/Event_Inventory_Detail__c/fields/Column_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Column_Display_Name__c</fullName>
    <description
  >This is what you want to display at the top of each column on the Inventory Tracker.</description>
    <inlineHelpText
  >This is what you want to display at the top of each column on the Inventory Tracker.</inlineHelpText>
    <label>Column Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>