force-app/main/default/objects/Event_Inventory_Detail__c/fields/Column_Type__c.field-meta.xml
<CustomField>
    <fullName>Column_Type__c</fullName>
    <description
  >Inventory means it pulls sponsorship level from the contracts, Notes means this record specifying a text field to show from the event record.</description>
    <inlineHelpText
  >Inventory means it pulls sponsorship level from the contracts, Notes means this record specifying a text field to show from the event record.</inlineHelpText>
    <label>Column Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inventory</fullName>
                <default>true</default>
                <label>Inventory</label>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>