force-app/main/default/objects/Event_Inventory_Detail__c/fields/Notes_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Notes_Field_Name__c</fullName>
    <label>Notes Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>