force-app/main/default/objects/Event_Inventory_Detail__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description
  >This is the order (from left to right) that the columns will appear on the inventory tracker.</description>
    <inlineHelpText
  >This is the order (from left to right) that the columns will appear on the inventory tracker.</inlineHelpText>
    <label>Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>