force-app/main/default/objects/Event_Inventory_Detail__c/fields/Sponsorship_Level__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Level__c</fullName>
    <label>Sponsorship Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Event Pass(es)</fullName>
            </value>
            <value>
                <fullName>Additional Reception Pass(es)</fullName>
            </value>
            <value>
                <fullName>Anchor Exhibitor (Harvard)</fullName>
            </value>
            <value>
                <fullName>Anchor Sponsor</fullName>
            </value>
            <value>
                <fullName>Anchor Sponsor (Cocktail Round)</fullName>
            </value>
            <value>
                <fullName>Attendee</fullName>
            </value>
            <value>
                <fullName>Awards Reception Underwriter</fullName>
            </value>
            <value>
                <fullName>Bronze Sponsor</fullName>
            </value>
            <value>
                <fullName>Conference Bag Provider (Harvard)</fullName>
            </value>
            <value>
                <fullName>Co-Sponsor</fullName>
            </value>
            <value>
                <fullName>DC Premier Sponsor</fullName>
            </value>
            <value>
                <fullName>DC Standard Sponsor</fullName>
            </value>
            <value>
                <fullName>Dinner Sponsor</fullName>
            </value>
            <value>
                <fullName>Display Exhibitor (Harvard)</fullName>
            </value>
            <value>
                <fullName>DSPI Sponsor</fullName>
            </value>
            <value>
                <fullName>Exhibitor Sponsor</fullName>
            </value>
            <value>
                <fullName>Exhibitor Sponsor (Booth)</fullName>
            </value>
            <value>
                <fullName>Exhibitor Sponsor (Cocktail Round)</fullName>
            </value>
            <value>
                <fullName>Exhibitor Sponsor (Tabletop)</fullName>
            </value>
            <value>
                <fullName>Gold Sponsor</fullName>
            </value>
            <value>
                <fullName>Headshots &amp; Highlights Booth Sponsor</fullName>
            </value>
            <value>
                <fullName>Hugh L. Carey Reception Sponsor</fullName>
            </value>
            <value>
                <fullName>Hugh L. Carey Reception Underwriter</fullName>
            </value>
            <value>
                <fullName>Keynote Sponsor</fullName>
            </value>
            <value>
                <fullName>Keynote Underwriter</fullName>
            </value>
            <value>
                <fullName>Lanyard Sponsor</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Networking Breaks Exhibitor (Harvard)</fullName>
            </value>
            <value>
                <fullName>Networking Breaks Sponsor</fullName>
            </value>
            <value>
                <fullName>Notebook Provider (Harvard)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>