force-app/main/default/objects/Event_Inventory_Detail__c/fields/Sponsorship_Level_Codified__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Level_Codified__c</fullName>
    <formula>IF(TEXT(Sponsorship_Level__c)&lt;&gt;null, 
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
  TEXT(Sponsorship_Level__c), 
                  
      &quot; &quot;, &quot;&quot;), 
      &quot;(&quot;, &quot;&quot;), 
      &quot;)&quot;, &quot;&quot;), 
      &quot;-&quot;, &quot;_&quot;), 
      &quot;&amp;&quot;, &quot;&quot;), 
      &quot;.&quot;, &quot;&quot;), 
      &quot;–&quot;, &quot;_&quot;), 
      &quot;#&quot;, &quot;&quot;), 
      &quot;:&quot;, &quot;&quot;), 
      &quot;/&quot;, &quot;&quot;), 
      &quot;!&quot;, &quot;&quot;), 
      &quot;*&quot;, &quot;&quot;), 

null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsorship Level (Codified)</label>
    <type>Text</type>
</CustomField>