force-app/main/default/objects/Event_Inventory_Detail__c/listViews/All_Event_Inventory_Tracker_Details.listView-meta.xml
<ListView>
    <fullName>All_Event_Inventory_Tracker_Details</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Brand__c</columns>
    <columns>Year__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Column_Display_Name__c</columns>
    <columns>Column_Type__c</columns>
    <columns>Color_Picker__c</columns>
    <columns>Sponsorship_Level__c</columns>
    <columns>Notes_Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Brands / Years / Types</label>
</ListView>