force-app/main/default/objects/Event_Inventory_Detail__c/listViews/Copy_of_2025_II_CA_Live.listView-meta.xml
<ListView>
    <fullName>Copy_of_2025_II_CA_Live</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Brand__c</columns>
    <columns>Year__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Column_Display_Name__c</columns>
    <columns>Column_Type__c</columns>
    <columns>Color_Picker__c</columns>
    <columns>Sponsorship_Level__c</columns>
    <columns>Notes_Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2026</value>
    </filters>
    <filters>
        <field>Event_Type__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </filters>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>INSIDER CA</value>
    </filters>
    <filters>
        <field>Sponsorship_Level__c</field>
        <operation>notContain</operation>
        <value>Additional Event Pass(es),Attendee,Member</value>
    </filters>
    <label>2026 - II CA - Live</label>
</ListView>