force-app/main/default/objects/Event_Inventory_Detail__c/listViews/X2025_CDG_Live.listView-meta.xml
<ListView>
    <fullName>X2025_CDG_Live</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Brand__c</columns>
    <columns>Year__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Column_Display_Name__c</columns>
    <columns>Column_Type__c</columns>
    <columns>Color_Picker__c</columns>
    <columns>Sponsorship_Level__c</columns>
    <columns>Notes_Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>CDG</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2025</value>
    </filters>
    <filters>
        <field>Event_Type__c</field>
        <operation>equals</operation>
        <value>Virtual,Live</value>
    </filters>
    <label>2025 - CDG - Live</label>
</ListView>