force-app/main/default/objects/Event_Inventory_Detail__c/listViews/X2026_Govtech_Live.listView-meta.xml
<ListView>
    <fullName>X2026_Govtech_Live</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Brand__c</columns>
    <columns>Year__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Column_Display_Name__c</columns>
    <columns>Column_Type__c</columns>
    <columns>Color_Picker__c</columns>
    <columns>Sponsorship_Level__c</columns>
    <columns>Notes_Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>Govtech</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2026</value>
    </filters>
    <filters>
        <field>Event_Type__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </filters>
    <label>2026- Govtech - Live</label>
</ListView>